--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ clap = "2.33.0"
 image = "0.24.5"
 rand = { version = "0.8.5", features = ["simd_support"] }
 rand_distr = "0.4.3"
+ffmpeg-next = "5.1.1"
+magick_rust = { version = "0.17.0", features = ["disable-hdri"] }
 neuron = { git = "https://github.com/otaviojr/neuron.git" }
